--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                         id: 8,
                         name: "IT Class",
                         time: "4:00 PM - 5:30 PM",
-                        image: "images/it.jpg",
+                        image: "images/IT.jpg",
                         ageGroup: "13-18 years",
                         price: 45
                     },                    
